package ar.edu.utn.frsf.capitalhumano.model;

import com.fasterxml.jackson.annotation.JsonManagedReference;

import ar.edu.utn.frsf.capitalhumano.model.enums.TipoPregunta;
import jakarta.persistence.*;
import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;
import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;

import org.hibernate.annotations.UpdateTimestamp;

@Entity
@Table(name = "preguntas")
@Getter
@Setter
@NoArgsConstructor
public class Pregunta {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "factor_id", nullable = false)
    private Factor factor;

    // Inmutabilidad por Versionado
    @Column(nullable = false)
    private Integer version;

    @Column(nullable = false)
    private String name;

    @Column(columnDefinition = "TEXT", nullable = false)
    private String text;

    @Column(columnDefinition = "TEXT")
    private String description;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    private TipoPregunta type;

    // Se actualiza automáticamente la fecha de actualización cada vez que se modifica la entidad
    @UpdateTimestamp
    @Column(name = "updated_at")
    private LocalDateTime updatedAt;

    @Column(name = "deleted_at")
    private LocalDateTime deletedAt;

    // Relación One-To-Many con las opciones
    @OneToMany(mappedBy = "question", cascade = CascadeType.ALL, orphanRemoval = true)
    @JsonManagedReference
    private List<Opcion> options = new ArrayList<>();

    // Métodos en español
    public String getNombre() {
        return name;
    }

    public void setNombre(String nombre) {
        this.name = nombre;
    }

    public String getTexto() {
        return text;
    }

    public void setTexto(String texto) {
        this.text = texto;
    }

    public String getDescripcion() {
        return description;
    }

    public void setDescripcion(String descripcion) {
        this.description = descripcion;
    }

    public TipoPregunta getTipo() {
        return type;
    }

    public void setTipo(TipoPregunta tipo) {
        this.type = tipo;
    }

    public LocalDateTime getFechaModificacion() {
        return updatedAt;
    }

    public void setFechaModificacion(LocalDateTime fechaModificacion) {
        this.updatedAt = fechaModificacion;
    }

    public LocalDateTime getFechaBaja() {
        return deletedAt;
    }

    public void setFechaBaja(LocalDateTime fechaBaja) {
        this.deletedAt = fechaBaja;
    }

    public List<Opcion> getOpciones() {
        return options;
    }

    public void setOpciones(List<Opcion> opciones) {
        this.options = opciones;
    }
}
