package ar.edu.utn.frsf.capitalhumano.model.enums;

public enum EstadoCuestionario {
    ACTIVE,
    IN_PROGRESS,
    COMPLETED,
    INCOMPLETE,
    NOT_ANSWERED
}
