package ar.edu.utn.frsf.capitalhumano.model.enums;

public enum Genero {
    H,
    M
}
