package ar.edu.utn.frsf.capitalhumano.model.enums;

public enum TipoCompetencia {
    TECNICA,
    CONDUCTUAL
}
