package ar.edu.utn.frsf.capitalhumano.model.enums;

public enum TipoDocumento {
    DNI,
    LE,
    LC,
    PP
}
