package ar.edu.utn.frsf.capitalhumano.model.enums;

public enum TipoPregunta {
    SINGLE_CHOICE,
    MULTIPLE_CHOICE
}
