@startuml
!pragma layout smetana
scale max 3000 width

' Configuraciones visuales limpias y legibles
left to right direction
skinparam shadowing false
skinparam roundcorner 10
skinparam nodesep 40
skinparam ranksep 60
skinparam classAttributeIconSize 0
skinparam DefaultFontName "Roboto"
skinparam DefaultFontSize 14
skinparam class {
    BackgroundColor White
    ArrowColor #333333
    BorderColor #555555
}
skinparam packageStyle rectangle

' ==========================================
' ENUMERACIONES
' ==========================================
package "Enumeraciones" {
    together {
        enum EstadoCuestionario {
            ACTIVO
            EN_PROCESO
            COMPLETADO
            INCOMPLETO
            SIN_CONTESTAR
        }
        enum TipoDocumento {
            DNI
            LE
            LC
            PP
        }
    }
    together {
        enum TipoPregunta {
            OPCION_SIMPLE
            OPCION_MULTIPLE
        }
        enum TipoCompetencia {
            TECNICA
            ACTITUDINAL
        }
        enum Genero {
            H
            M
        }
    }
}

' ==========================================
' SERVICIOS DEL SISTEMA (Dominio y Aplicación)
' ==========================================
package "Servicios del Sistema" {

    class ServicioSeguridad <<Servicio>> {
        + autenticarConsultor(usuario: String, pass: String): Boolean
        + autenticarCandidato(claveAcceso: String): Boolean
    }

    class ServicioCandidato <<Servicio>> {
        + importarCandidatos(archivo: File): List<Candidato>
    }

    class ServicioEvaluacion <<Servicio>> {
        + crearEvaluacion(puesto: Puesto, candidatos: List<Candidato>): Evaluacion
    }

    class ServicioCuestionario <<Servicio>> {
        + iniciarCuestionario(idCuestionario: Long): Cuestionario
        + registrarRespuestasBloque(idCuestionario: Long, nroBloque: Integer, respuestas: Map): void
        + calcularPuntajes(idCuestionario: Long): Double
        + finalizarCuestionariosVencidos(): void
    }

    class ServicioReporte <<Servicio>> {
        + emitirOrdenDeMerito(idPuesto: Long, idEval: Long): ReporteOrdenMerito
        + obtenerResumenPosiciones(): List<ResumenPosicion>
    }

    class ServicioIA <<Servicio>> {
        + generarPregunta(competencia: String, factor: String): Pregunta
    }

    class ServicioAuditoria <<Servicio>> {
        + registrarBaja(entidad: Auditable, consultor: Consultor): void
    }
}

' ==========================================
' ENTIDADES Y CONSTRUCTOS DE DOMINIO
' ==========================================
package "Dominio" {

    interface Auditable {
        + getIdentificadorAuditoria(): Long
        + getTipoEntidad(): String
    }

    class RegistroAuditoria {
        - fechaHora: DateTime
        - tipoEntidad: String
        - idEntidadEliminada: Long
        - descripcion: String
    }

    class Consultor {
        - nombreUsuario: String
    }

    class Candidato {
        - nroCandidato: Long
        - tipoDocumento: TipoDocumento
        - nroDocumento: String
        - nombre: String
        - apellido: String
        - fechaNacimiento: Date
        - genero: Genero
        - email: String
        - escolaridad: String
        - nacionalidad: String
    }

    class Empresa {
        - nombre: String
        - fechaBaja: Date
    }

    class Puesto {
        - codigo: String
        - nombre: String
        - descripcion: String
        - fechaBaja: Date
    }

    class CompetenciaPuesto {
        - ponderacionRequerida: Integer
    }

    class Competencia {
        - codigo: String
        - nombre: String
        - descripcion: String
        - tipo: TipoCompetencia
        - fechaBaja: Date
    }

    class Factor {
        - codigo: String
        - nombre: String
        - descripcion: String
        - nroOrden: Integer
        - fechaBaja: Date
    }

    class Pregunta {
        - version: Integer
        - nombre: String
        - texto: String
        - descripcion: String
        - tipo: TipoPregunta
        - fechaBaja: Date
    }

    class Opcion {
        - ordenVisualizacion: Integer
        - ponderacion: Integer
        - texto: String
    }

    class Evaluacion {
        - codigo: String
        - fechaCreacion: Date
        - fechaCierre: Date
        - duracionEnMinutos: Integer
        - cantPreguntasPorBloque: Integer
    }

    class Cuestionario {
        - claveIngreso: String
        - fechaHoraInicio: Date
        - fechaHoraFin: Date
        - ultimoIngreso: Date
        - cantidadAccesos: Integer
        - puntajeTotal: Double
        - estado: EstadoCuestionario
    }

    class Bloque {
        - nroBloque: Integer
    }

    class ItemPregunta {
        - ordenVisualizacion: Integer
        - puntajeObtenido: Double
    }

    class ItemOpcion {
        - respondido: Boolean
    }

    class PuntajeCompetencia {
        - puntaje: Double
    }

    class PuntajeFactor {
        - puntaje: Double
    }
}

' ==========================================
' RELACIONES CONCEPTUALES
' ==========================================
ServicioSeguridad ..> Consultor : "autentica >"
ServicioSeguridad ..> Cuestionario : "valida acceso >"

Empresa ..|> Auditable
Puesto ..|> Auditable
Competencia ..|> Auditable
Factor ..|> Auditable
Pregunta ..|> Auditable

RegistroAuditoria "*" --> "1" Consultor : "realizado por"
ServicioAuditoria ..> RegistroAuditoria : "registra >"
ServicioAuditoria ..> Auditable : "observa baja >"

Empresa "1" *-- "0..*" Puesto
Consultor "1" <-- "*" Evaluacion : "crea"
Puesto "1" <-- "*" Evaluacion : "examina"

Puesto "1" *-- "1..*" CompetenciaPuesto
CompetenciaPuesto "*" --> "1" Competencia

Competencia "1" *-- "1..*" Factor
Factor "1" *-- "0..*" Pregunta
Pregunta "1" *-- "2..*" Opcion

Evaluacion "1" *-- "0..*" Cuestionario
Candidato "1" <-- "*" Cuestionario : "pertenece a"

Cuestionario "1" *-- "1..*" Bloque
Bloque "1" *-- "1..*" ItemPregunta
ItemPregunta "*" --> "1" Pregunta

ItemPregunta "1" *-- "2..*" ItemOpcion
ItemOpcion "*" --> "1" Opcion

Cuestionario "1" *-- "0..*" PuntajeCompetencia
PuntajeCompetencia "*" --> "1" Competencia
PuntajeCompetencia "1" *-- "1..*" PuntajeFactor
PuntajeFactor "*" --> "1" Factor

@enduml
